# Spell-Quest

./: .env.example  .gitignore  .vercelignore  GAME_GUIDE.md  README.md  index.html  metadata.json  package-lock.json  package.json  phase2_roadmap.html  spellbound_maps_7_to_10.html  spellbound_world_map.html
backend/: .env.example  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: .gitkeep
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/v1/endpoints/: health.py
backend/app/core/: config.py
backend/app/db/: base.py
backend/app/services/: health_service.py
backend/tests/: test_health.py
frontend/: .env.example  GAME_CONFIG_REFERENCE.md  GAME_GUIDE.md  README.md  index.html  package.json
frontend/src/: i18n.ts  main.tsx
frontend/src/assets/entities/: entityRegistry.ts
frontend/src/assets/entities/svgEntities/: BarkGolem.tsx  FallbackEntity.tsx  (+9 more)
frontend/src/components/: EntityDisplay.tsx
frontend/src/config/: config.ts  game-config.json
frontend/src/controllers/: levelController.ts  playerController.ts
frontend/src/data/: bossSkills.ts  effects.ts
frontend/src/models/: types.ts
frontend/src/styles/: index.css
frontend/src/utils/: effectEngine.ts  gameUtils.ts
frontend/src/views/: App.tsx
frontend/src/views/components/: AdventureMap.tsx  AdventureWorldSelect.tsx  BestiaryView.tsx  CombatView.tsx  EffectGuideView.tsx  LuckyWheel.tsx
src/: App.tsx  config.ts  topics.ts  types.ts  words.ts
src/components/: AdventureMap.tsx  CombatView.tsx  LuckyWheel.tsx
src/lib/: utils.ts
